# sphinx-markdown

./: .buildinfo  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js  test-md.html  test-rst.html  test.html
_sources/: index.rst.txt  test-md.md.txt  test-rst.rst.txt  test.md.txt
docs/: conf.py  index.rst  readme.md
